--- a/navbar.css
+++ b/navbar.css
@@ -32,6 +32,7 @@
 
 .left-navbar .navbar-title {
     font-size: 30px;
+    font-weight: bold;
     text-align: center;
     text-decoration: none;
     margin: 0;
