--- a/snippet.css
+++ b/snippet.css
@@ -588,8 +588,8 @@
 }
 
 .info-variations-search-output .info-variations-info {
-    height: 10%;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
